fixed some layout bugs and refactored top menu border

--- a/wordle-solver/src/App.css
+++ b/wordle-solver/src/App.css
@@ -18,13 +18,6 @@
     border: 1px solid blue;
 }
 
-.top-menu-border {
-    position: absolute;
-    top: 74px;
-    width: 100vw;
-    border-bottom: 1px solid var(--select-grey);
-}
-
 .main-container {
     display: grid;
     grid-template-columns: 1fr fit-content(100%) 1fr;
@@ -36,6 +29,7 @@
     margin: 0 auto;
     min-height: min-content;
     min-width: min-content;
+    border: 1px solid red;
 }
 
 .error-box {
