--- a/wordle-solver/src/Menu.css
+++ b/wordle-solver/src/Menu.css
@@ -1,17 +1,17 @@
 .top-menu {
     grid-row: 1;
     grid-column: 2;
+    grid-column: 1 / -1;
     display: flex;
     align-items: center;
     justify-content: center;
+    border-bottom: 1px solid var(--select-grey);
 }
   
 .top-menu-item {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 1rem;
-    margin-right: 1rem;
     cursor: pointer;
     width: 72px;
     height: 72px;
